2011-02-13  Ben Bolker <bbolker@gmail.com>

	* tests/simulate.R: New tests for simulate()

	* R/lmer.R, data/PB.rda, man/cbpp_PB.Rd, man/mer-class.Rd,
	  man/simulate.Rd, man/sleepstudy_PB.Rd: added simulate method for GLMMs
	  split refit() and simulate() docs out to a separate file
	  for testing/example convenience, add parametric bootstrap results as
	  data

2011-02-08  Douglas Bates  <bates@stat.wisc.edu>

	* R/carryOver.R (lagged_factor): Correct undiscovered error in
	lagging of the variables (this file contains private functions
	that were used by Harold Doran and me).

	* DESCRIPTION: Add Ben to the list of authors and change the
	maintainer address.  Bump version number and date.

2010-11-09  Douglas Bates  <bates@stat.wisc.edu>

	* R/lmer.R (glmer): Forbid the use of "quasi" families in glmer.

2010-10-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/lmer-1.R (.unsafe.BLAS): allow to set  identical <- all.equal
	for some tests {mainly for Mac OSX i386}

2010-06-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Date, Version): 0.999375-34

	* R/lmer.R (glmer_finalize): for a glmer(), allow q == n

	* tests/lmer-1.R (rPoisGLMMi): test example, originating from Ben Bolker

2009-09-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Depends): 0.999375-32; needs latest version of Matrix

	* src/init.c (lme4_R_cholmod_error): now using own CHOLMOD error
	handler, which does reset the 'Common' "as to start".

	* tests/lmer-1.R: re-activate first part of mcmcsamp() examples.

2009-06-02  Douglas Bates <bates@stat.wisc.edu>

	* [r318] R/lmer.R: Duh! Forgot the meaning of "stopifnot" and did not
	  reverse the condition.  Now fixed.
	* [r316] DESCRIPTION: New release
	* [r315] R/lmer.R: More informative error message for lmer_finalize.
	  Also check this condition in glmer_finalize.
	* [r314] src/lmer.c: Suppress check on q > n in update_u.

2009-05-20  Douglas Bates <bates@stat.wisc.edu>
